Fix overflow of HorizontalAccordion component

--- a/components/accordions/HorizontalAccordion.module.scss
+++ b/components/accordions/HorizontalAccordion.module.scss
@@ -6,6 +6,7 @@
 
   display: flex;
   width: 100%;
+  overflow: hidden;
 
   transition: min-height var(--transition-time);
 
